@@ -154,6 +154,8 @@ Bug Fixes
 
 * SOLR-17315: Fixed "next step" example urls generated by bin/solr create commands to use the newly created  collection/core name. (Eric Pugh)
 
+* SOLR-17326: Generated v2 'SolrRequest' implementations now all serialize to the correct response type (Christos Malliaridis via Jason Gerlowski)
+
 Dependency Upgrades
 ---------------------
 (No changes)
